--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,11 @@ deps =
 
 setenv =
     PYTHONPATH = {toxinidir}
+    META_SANDBOX_API_KEY = {env:META_SANDBOX_API_KEY}
+    META_API_KEY = {env:META_API_KEY}
 commands =
-    black --check scripts/
-    pytest -v --cov=scripts --cov-report=html --cov-fail-under=100 tests/
+    black --check src/regus_social_media/
+    pytest -v --cov=src/regus_social_media --cov-report=html --cov-fail-under=100 tests/
 
 [testenv:format]
 basepython = python3
