--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,6 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "regus_social_media"
 version = "0.0.1"
+
+[tool.setuptools]
+packages = { find = { where = ["src"] } }
