--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,8 @@ setenv =
     META_SANDBOX_API_KEY = {env:META_SANDBOX_API_KEY}
     META_API_KEY = {env:META_API_KEY}
 commands =
-    black --check src/regus_social_media/
-    pytest -v --cov=src/regus_social_media --cov-report=html --cov-fail-under=100 tests/
+    black --check src/social_media_aggregator/
+    pytest -v --cov=src/social_media_aggregator --cov-report=html --cov-fail-under=100 tests/
 
 [testenv:format]
 basepython = python3
@@ -26,3 +26,11 @@ deps =
     black
 commands =
     black .
+
+[testenv:build]
+basepython = python3
+skip_install = true
+deps =
+    poetry
+commands =
+    poetry build
