--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,16 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "regus_social_media"
-version = "0.0.1"
+name = "social_media_aggregator"
+version = "0.1.5"
 
 [tool.setuptools]
 packages = { find = { where = ["src"] } }
 
 [tool.poetry]
-name = "regus_social_media"
-version = "0.1.0"
-description = "A description of your project"
+name = "social_media_aggregator"
+version = "0.1.5"
+description = "This is a project that aggregates several social media accounts into a single space"
 authors = ["José Viegas <jviegas6@gmail.com>"]
 license = "MIT"
 
