--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9, 3.11] # Adjust based on your tox envlist
+        python-version: [3.9, 3.10, 3.11] # Adjust based on your tox envlist
 
     steps:
     - uses: actions/checkout@v2
