--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 isolated_build = true
 ; envlist = py37, py38, py39, py310, py311
-envlist = py310
+envlist = py39, py310, py311
 
 [testenv]
 deps =
@@ -17,7 +17,7 @@ setenv =
     META_API_KEY = {env:META_API_KEY}
 commands =
     black --check src/social_media_aggregator/
-    pytest -v --cov=src/social_media_aggregator --cov-report=html --cov-fail-under=100 tests/
+    pytest -v --cov=src/social_media_aggregator --cov-report=html --cov-fail-under=95 tests/
 
 [testenv:format]
 basepython = python3
