--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -10,30 +10,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+
+    - name: Install Poetry
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+
     - name: Build Package
       run: |
-        python -m pip install --upgrade poetry
-        python -m poetry build
+        poetry build
+
     - name: Create GitHub Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.ref }}  # This uses the full ref, you might want to trim it down
+        release_name: Release ${{ github.ref_name }}  # This is more likely what you want for a release name
         draft: false
         prerelease: false
+
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/
-        asset_name: social-media-aggregator.whl
+        asset_path: ./dist/social-media-aggregator-0.1.5-py3-none-any.whl  # The asset path needs to be precise
+        asset_name: social-media-aggregator-0.1.5-py3-none-any.whl  # And should match the file you want to upload
         asset_content_type: application/octet-stream
