--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -19,6 +19,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
+
+      - name: Determine if Pre-release
+        id: prerelease_check
+        run: |
+          if [[ "${{ github.ref_name }}" =~ (alpha|beta|rc|a|b) ]]; then
+            echo "prerelease=true $GITHUB_OUTPUT"
+          else
+            echo "prerelease=false $GITHUB_OUTPUT"
+          fi
           
       - name: Install Poetry
         run: |
@@ -41,7 +50,7 @@ jobs:
           tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
           draft: false
-          prerelease: false
+          prerelease: ${{ steps.prerelease_check.outputs.prerelease }}
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
